--- a/Student/templates/Auth/Au.html
+++ b/Student/templates/Auth/Au.html
@@ -4,6 +4,7 @@
 <html>
 <head>
   <title></title>
+  <link rel="icon" type="image/PNG" href="{% static 'images/Tanaad College LOGO.PNG'%}">
   <link rel="stylesheet" href=" {% static 'css/auth.css' %}">
   <style>
     a{
