--- a/Student/templates/Auth/Reg.html
+++ b/Student/templates/Auth/Reg.html
@@ -6,6 +6,7 @@
 <head>
   <title></title>
   <link rel="stylesheet" href=" {% static 'css/auth.css' %}">
+  <link rel="icon" type="image/PNG" href="{% static 'images/Tanaad College LOGO.PNG'%}">
 </head>
 <body>
   <div class="container">
