--- a/Student/templates/Courses/Add.html
+++ b/Student/templates/Courses/Add.html
@@ -24,7 +24,7 @@
             <input type="number" name="Fee" class="form-control">
            </div>
            </div>
-            <button type="submit" class="btn btn-info btn-lg active">submit</button>
+            <button type="submit" class="btn btn-info btn-lg active" onclick="saved()">submit</button>
             </form>
           </div>
         </div>
