--- a/Student/templates/Courses/Course.html
+++ b/Student/templates/Courses/Course.html
@@ -30,7 +30,7 @@
                 <a href="updatec/{{x.id}} "><button class="btn btn-primary">Update</button></a>
             </td>
             <td>
-                <a href="delete_c/{{x.id}} "><button class="btn btn-danger">Delete</button></a>
+                <a href="delete_c/{{x.id}} "><button class="btn btn-danger" onclick="deletea()">Delete</button></a>
             </td>
         </tr>
         
