--- a/Student/templates/Dashboard/Dashbours1.html
+++ b/Student/templates/Dashboard/Dashbours1.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>User Dashboard </title>
+  <link rel="icon" type="image/PNG" href="{% static 'images/Tanaad College LOGO.PNG'%}">
   <link rel="stylesheet" href="{% static 'css/Index.css' %}">
   <link rel="stylesheet" href=" {% static 'bootstrap.min.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
