--- a/Student/templates/Dashboard/dashboard.html
+++ b/Student/templates/Dashboard/dashboard.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Admin Dashboard </title>
+  <link rel="icon" type="image/PNG" href="{% static 'images/Tanaad College LOGO.PNG'%}">
   <link rel="stylesheet" href="{% static 'css/Admindash.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
