--- a/Student/templates/student/Home.html
+++ b/Student/templates/student/Home.html
@@ -30,7 +30,7 @@
                 <a href="update/{{x.id}} "><button class="btn btn-primary">Update</button></a>
             </td>
             <td>
-                <a href="deleted/{{x.id}} "><button class="btn btn-danger" onclick="delte()">Delete</button></a>
+                <a href="deleted/{{x.id}} "><button class="btn btn-danger" onclick="deletea()">Delete</button></a>
             </td>
         </tr>
         
