--- a/Student/templates/student/Add.html
+++ b/Student/templates/student/Add.html
@@ -40,7 +40,7 @@
                 <input type="date" name="date" class="form-control">
                </div>
                </div>
-                <button type="submit" class="btn btn-info btn-lg active">submit</button>
+                <button type="submit" class="btn btn-info btn-lg active" onclick="saved()">submit</button>
                 </form>
             
     </div>
