--- a/Student/templates/student/Update.html
+++ b/Student/templates/student/Update.html
@@ -40,7 +40,7 @@
 <input type="date" name="date" class="form-control" value="{{st.date}}">
 </div>
 </div>
-<button type="submit" class="btn btn-info btn-lg active">submit</button>
+<button type="submit" class="btn btn-info btn-lg active" onclick="upadte()">submit</button>
 </form>
 
 </div>
